--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/js-js/dominance-frontier#readme",
   "devDependencies": {
+    "assert-text": "^1.1.0",
     "jscs": "^1.13.1",
     "jshint": "^2.8.0",
     "json-pipeline": "^1.2.0",
